# kokoro-onnx-API

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README-cn.md  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
app/: audio.py  auth.py  config.py  g2p.py  main.py  models.py  timing.py
app/routers/: models.py  speech.py
static/: index.html
