[project]
name = "mykokoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx[gpu]",
    "soundfile",
    "pydub",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "misaki-fork[zh]",
    "misaki-fork[ja]",
    "unidic",
    "g2p_en",
]
